<resources>
  <string name="app_name">Analytic Spray Down</string>
  <string name="build_string">Build Pyramid</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="only_use_leads_preference">Only include leads</string>
  <string name="only_use_leads_preference_summary">Leave out topropes and follows.</string>
  <string name="ignore_duplicates_preference">Ignore duplicate ticks</string>
  <string name="ignore_duplicates_preference_summary">Only include ticks for the same climb once.</string>
  <string name="build_route_pyramid_preference">Include route pyramid</string>
  <string name="build_route_pyramid_preference_summary">Merged sport and trad, such heresy!</string>
  <string name="build_sport_pyramid_preference">Include sport pyramid</string>
  <string name="build_sport_pyramid_preference_summary">You put what in the crack?</string>
  <string name="build_trad_pyramid_preference">Include trad pyramid</string>
  <string name="build_trad_pyramid_preference_summary">What\'s a bolt?</string>
  <string name="build_boulder_pyramid_preference">Include boulder pyramid</string>
  <string name="build_boulder_pyramid_preference_summary">Just pull harder, bro.</string>
  <string name="build_ice_pyramid_preference">Include ice pyramid</string>
  <string name="build_ice_pyramid_preference_summary">I haven\'t felt my extremities in years.</string>
  <string name="build_aid_pyramid_preference">Include aid pyramid</string>
  <string name="build_aid_pyramid_preference_summary">I don\'t like to touch rocks with my bare hands.</string>
  <string name="general_settings_category">General</string>
  <string name="pyramid_settings_category">Pyramids</string>
  <string name="cache_invalidate_time_preference">Cache timeout (hours)</string>
  <string name="cache_invalidate_time_preference_summary">How long we\'ll wait before pulling your latest sprays.</string>
  <string name="grade_system_preference">Use European grades</string>
  <string name="grade_system_preference_summary">Allez! Go Spray!</string>
  <string name="always_optimistic_preference">Always build optimistic</string>
  <string name="always_optimistic_preference_summary">You\'re totally gonna send harder soon.</string>
  <string name="pyramid_height_preference">Pyramid height</string>
  <string name="pyramid_height_preference_summary">How deep should the spray go?</string>
  <string name="pyramid_step_modifier_size_preference">Level size modifier</string>
  <string name="pyramid_step_modifier_size_preference_summary">How much bigger each level should be.</string>
  <string name="pyramid_step_modifier_type_preference">Level size modifier type</string>
  <string name="pyramid_step_modifier_type_preference_summary">How is each step size related.</string>
  <string name="csv_import_message">We know, the need for this sucks. The APIs we rely on are limited
        in their abilities and so some functionality can only be had by importing richer data sets.</string>
  <string name="csv_import_button">Import</string>
  <string name="mp_data_link_label">You can find this on the Mountain Project api page when you are logged in:</string>
  <string name="drawer_menu_settings">Settings</string>
  <string name="add_user">Add User</string>
  <string name="manage_users">Manage Users</string>

  <string-array name="navigation_drawer_items">
    <!--<item>Stats</item>-->
    <!--<item>Training</item>-->
    <item>Settings</item>
    <!--<item>Import</item>-->
  </string-array>
  <string-array name="pyramid_step_modifier_type_preference_entries">
    <item>Additive</item>
    <item>Multiplicative</item>
  </string-array>
  <string-array name="time_scale_spinner_entries">
    <item>Month</item>
    <item>3 Months</item>
    <item>6 Months</item>
    <item>Year</item>
    <item>Lifetime</item>
  </string-array>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
